# todo

./: .gitignore  README.md  setup.cfg
todo/: __init__.py  app.py
todo/controllers/: __init__.py  task_controller.py  task_list_controller.py
todo/models/: __init__.py  task.py  tasklist.py
todo/views/: main_view.py  my_day_view.py  task_details_view.py  task_list_details_view.py  task_lists_view.py
todoapp/: __init__.py  app.py
todoapp/controllers/: __init__.py  task_controller.py  task_list_controller.py
todoapp/models/: __init__.py  task.py  tasklist.py
todoapp/views/: __init__.py  main_view.py  my_day_view.py  task_details_view.py  task_list_details_view.py  task_lists_view.py
