[metadata]
name = todo
version = 0.1.1-1
description = A simple To-Do App
author = Lists Johnson
author_email = listsjohnson@gmail.com

[options]
packages = find:

[options.entry_points]
console_scripts =
    todo = todo.app:main

[options.package_data]
* = *.txt, *.md

[options.extras_require]
# Add your project-specific dependencies here
# For example:
 dev = 
     pytest
     pylint
 tkinter =
     tk
     ttk
